# Modular-LED-HRI-

./: .gitignore  ArdcodeCreator.cpp  README.md  Signalling.h  testcode.cpp  testcode2.cpp
ArdCreator/: ArdCreator.cbp  ArdCreator.depend  ArdCreator.layout  ArdcodeCreator.cpp  ArdcodeCreator.h  main.cpp
GUI Code/: mainwindow.cpp
LED_Test/: LED_Test.ino
LightParameter/: LightParameter.cbp  LightParameter.cpp  LightParameter.depend  LightParameter.h  LightParameter.h~  LightParameter.layout
LightSignal/: LightSignal.cpp  LightSignal.h
MultipleObjects/: MultipleObjects.ino
NeoPixelCodeConverter/: NeoPixelCodeConverter.cbp  NeoPixelCodeConverter.cpp  NeoPixelCodeConverter.cpp~  NeoPixelCodeConverter.depend  NeoPixelCodeConverter.h  NeoPixelCodeConverter.h~  NeoPixelCodeConverter.layout
NeoPixelCodeConverterLib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ledcppfile.cpp  neopixeltest  out.cpp  upload_linux.sh
NeoPixelCodeConverterLib/LightParameter/: CMakeLists.txt  Makefile  cmake_install.cmake
NeoPixelCodeConverterLib/NeoPixelCodeConverter/: CMakeLists.txt  Makefile  NeoPixelCodeConverter.cpp~  cmake_install.cmake
NeoPixelCodeConverterLib/example/: CMakeLists.txt  example.cpp  neopixelexample  out.ino
Signaling/: Signaling.cpp  Signaling.h  keywords.txt
Signalling/: Signalling.cpp  Signalling.h  keywords.txt
Testcode/: Testcode.cbp  Testcode.depend  Testcode.layout  testcode2.cpp
UpdateData/: UpdateData.cpp  UpdateData.h
Update_Data/: Update_Data.cbp  Update_Data.cpp  Update_Data.depend  Update_Data.h  Update_Data.layout
(+230 files in other folders)
